# asoul-weekly

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  config.toml.example  log4rs.yml  sqlx-data.json
.cargo/: config.toml
.github/workflows/: build.yml  docker.yml
auto_gen_article/: Cargo.toml
auto_gen_article/src/: main.rs
auto_gen_article/src/zhuanlan/: cards.rs  dynamic_detail.rs  mod.rs
bilibili/: Cargo.toml
bilibili/src/: lib.rs  tag_feed.rs  tag_videos.rs
gen-article/: Cargo.toml  build.rs
gen-article/src/: download_image.rs  fetch_dynamics.rs  lib.rs  login.rs  main.rs
gen-article/src/zhuanlan/: dynamic_detail.rs  items.rs  mod.rs  save_draft.rs  upload_image.rs
migrations/: 20210815123604_initialize.down.sql  20210815123604_initialize.up.sql  20210818092359_add_author.down.sql  20210818092359_add_author.up.sql  20210822095226_add-group-table.up.sql  20210906130440_add-marker.down.sql  20210906130440_add-marker.up.sql
src/: config.rs  db.rs  lib.rs  main.rs
src/bilibili/: mod.rs  tag_feed.rs  tag_videos.rs
src/biz/: callback.rs  cards.rs  group.rs  mod.rs  summary.rs
src/biz/bilibili/: dynamic.rs  mod.rs  video.rs
src/feishu/: helpers.rs  mod.rs  token_manager.rs
src/http/: category.rs  error.rs  mod.rs
tests/: test_584996793651183014.rs
