[package]
name = "asoul_weekly"
version = "0.1.0"
edition = "2018"
default-run = "asoul_weekly"

[workspace]
members = [
    "gen-article",
    "bilibili"
]

# 不优化体积了，加速编译
# [profile.release]
# lto = true
# codegen-units = 1

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0

[[bin]]
name = "print_group"
path = "bin/print_group.rs"

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls", "sqlx/runtime-actix-native-tls", "biliapi/native-tls", "biliapi/native-tls"]
rustls = ["reqwest/rustls-tls", "sqlx/runtime-actix-rustls", "biliapi/rustls", "biliapi/rustls"]
# 是否发送归档信息
send-archive = []

[dependencies]
bilibili = { path = "./bilibili" }
actix-web = "4.0.0-beta.8"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
futures = "0.3.16"
reqwest = { version = "0.11.4", default-features = false, features = ["json", "multipart"] }
parking_lot = "0.11.1"
# redis = { version = "0.21.0", features = ["tokio-comp"] }
# bb8 = "0.7.0"
# bb8-redis = "0.10.0"
sqlx = { version = "0.5.5", features = ["sqlite", "macros", "chrono", "migrate", "offline"] }

anyhow = "1.0.44"

serde = { version = "1", features = ["derive"] }
serde_json = "1.0.68"
toml = "0.5.8"

log = "*"
log4rs = "1.0.0"

biliapi = { version = "0.1.12", default-features = false }
chrono = "0.4.19"
chrono-tz = "0.5.3"

lazy_static = "1.4.0"
regex = "1.5.4"

# 拼图
merge-images = { version = "*", git = "https://github.com/gwy15/merge-images" }
# merge-images = { version = "*", path = "../merge-images" }

[dev-dependencies]
pretty_env_logger = "0.4.0"
