[package]
name = "bilibili"
version = "0.1.0"
edition = "2018"

[features]
default = []
native-tls = ["reqwest/native-tls", "biliapi/native-tls"]
rustls = ["reqwest/rustls-tls", "biliapi/rustls"]

[dependencies]
biliapi = { version = "0.1.10-beta.8", default-features = false }
serde = { version = "1", features = ["derive"] }
chrono = "0.4.19"
reqwest = { version = "0.11.4", default-features = false, features = [] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
log = "*"
serde_json = "*"
