[package]
name = "gen-article"
version = "0.1.4"
edition = "2018"
build = "build.rs"

[dependencies]
asoul_weekly = { version = "*", path = ".." }
bilibili = { path = "../bilibili", features = ["native-tls"] }

log = "*"
log4rs = "1.0.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.4", default-features = false, features = ["json", "multipart"] }
anyhow = "*"
chrono = "0.4.19"
biliapi = "0.1.10-beta.8"
serde = { version = "1", features = ["derive"] }
serde_json = "*"

regex = "1.5.4"
imagesize = "0.9.0"
pretty_env_logger = "*"

# 登录和cookie 持久化
qrcode = "0.12.0"
cookie_store = "0.15.0"
reqwest_cookie_store = "0.2.0"


[build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "枝江晚报自动生成.exe"
LegalCopyright = "Copyright 大头大头大 © 2021"
