[package]
name = "gen-article"
version = "0.1.15"
edition = "2018"
build = "build.rs"

[features]
# default = [ "native-tls", "thumbnail" ]
default = []
native-tls = [ "bilibili/native-tls", "biliapi/native-tls" ]
rustls = [ "bilibili/rustls", "biliapi/rustls" ]
thumbnail = [ "merge-images" ]

[dependencies]
bilibili = { path = "../bilibili", default-features = false }

log = "*"
log4rs = "1.0.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3.17"
reqwest = { version = "0.11.4", default-features = false, features = ["json", "multipart"] }
anyhow = "*"
chrono = "0.4.19"
chrono-tz = "0.5.3"
biliapi = { version = "0.1.11", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "*"

regex = "1.5.4"
imagesize = "0.9.0"
pretty_env_logger = "*"

lazy_static = "1.4.0"
maplit = "1.0.2"

# 登录和cookie 持久化
qrcode = "0.12.0"
cookie_store = "0.15.0"
reqwest_cookie_store = "0.2.0"

# 生成二创图片
bytes = "1.1.0"
merge-images = { version = "*", git = "https://github.com/gwy15/merge-images", optional = true }

[build-dependencies]
chrono = "0.4.19"
chrono-tz = "0.5.3"
git-version = "0.3.5"

[target.'cfg(windows)'.dependencies]
notify-rust = "4"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "枝江日报自动生成.exe"
LegalCopyright = "Copyright 大头大头大 © 2021"
